--- a/lectures/005-functional-forms/005-functional-forms.html
+++ b/lectures/005-functional-forms/005-functional-forms.html
@@ -641,6 +641,13 @@ $$
 
 ---
 
+# Intercept *dummy* variables
+
+&lt;img src="reg1.png" style="width: 70%" /&gt;
+
+
+---
+
 
 # Slope *dummy* variables
 
@@ -704,10 +711,12 @@ $$
 $$
 
 
+---
+
+# Slope *dummy* variables
 
 
-
-
+&lt;img src="reg2.png" style="width: 70%" /&gt;
 
 
 ---
